# src/controllers/product.ts
@@ -1,9 +1,16 @@
 import { Request, RequestHandler, Response } from 'express';
 import { getProductSchema } from '../schemas/get-product-schema';
 import { getProductByIdSchema } from '../schemas/get-product-by-id-schema';
-import { getAllProducts, getProduct, incrementProductView } from '../services/product';
+import {
+  getAllProducts,
+  getProduct,
+  incrementProductView,
+  getProductsFromSameCategory,
+} from '../services/product';
 import { getAbsoluteImageUrl } from '../utils/get-absolute-image-url';
 import { getCategory } from '../services/category';
+import { getProductRelatedSchema } from '../schemas/get-product-related-schema';
+import { getProductRelatedQuerySchema } from '../schemas/get-one-product-query-schema';
 
 export const getProducts: RequestHandler = async (req: Request, res: Response) => {
   const parseResult = getProductSchema.safeParse(req.query);
@@ -58,4 +65,31 @@ export const getProductById: RequestHandler = async (req: Request, res: Response
   await incrementProductView(product.id);
 
   res.json({ error: null, product: productWithAbsoluteImages, category });
+};
+
+export const getProductRelated: RequestHandler = async (req: Request, res: Response) => {
+  const paramsResult = getProductRelatedSchema.safeParse(req.params);
+  const queryResult = getProductRelatedQuerySchema.safeParse(req.query);
+
+  if (!paramsResult.success || !queryResult.success) {
+    res.status(400).json({ error: 'Invalid query parameters' });
+    return;
+  }
+
+  const { id } = paramsResult.data;
+  const { limit } = queryResult.data;
+
+  const products = await getProductsFromSameCategory(parseInt(id), limit ? parseInt(limit) : 4);
+  if (!products) {
+    res.status(404).json({ error: 'Products not found' });
+    return;
+  }
+
+  const productsWithAbsoluteUrl = products.map((product) => ({
+    ...product,
+    image: product.image ? getAbsoluteImageUrl(product.image) : null,
+    liked: false, // TODO: Implement liked logic
+  }));
+
+  res.json({ error: null, products: productsWithAbsoluteUrl });
 };
